--- a/assets/css/poke-details.css
+++ b/assets/css/poke-details.css
@@ -2,13 +2,84 @@ body {
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   height: 100vh;
-  background-color: aquamarine;
 }
 
 header {
   display: flex;
   justify-content: start;
   margin: 1.5rem 0 0 1.5rem;
+}
+
+.normal {
+  background-color: #a6a877;
+}
+
+.grass {
+  background-color: #77c850;
+}
+
+.fire {
+  background-color: #ee7f30;
+}
+
+.water {
+  background-color: #678fee;
+}
+
+.electric {
+  background-color: #f7cf2e;
+}
+
+.ice {
+  background-color: #98d5d7;
+}
+
+.ground {
+  background-color: #dfbf69;
+}
+
+.flying {
+  background-color: #a98ff0;
+}
+
+.poison {
+  background-color: #a040a0;
+}
+
+.fighting {
+  background-color: #bf3029;
+}
+
+.psychic {
+  background-color: #f65687;
+}
+
+.dark {
+  background-color: #725847;
+}
+
+.rock {
+  background-color: #b8a137;
+}
+
+.bug {
+  background-color: #a8b720;
+}
+
+.ghost {
+  background-color: #6e5896;
+}
+
+.steel {
+  background-color: #b9b7cf;
+}
+
+.dragon {
+  background-color: #6f38f6;
+}
+
+.fairy {
+  background-color: #f9aec7;
 }
 
 .content-poke {
@@ -62,7 +133,6 @@ header {
   border-radius: 1rem;
   text-align: center;
   filter: brightness(1.1);
-  background-color: aquamarine;
 }
 
 .number {
@@ -76,4 +146,17 @@ header {
   background-color: white;
   border-radius: 2rem;
   height: 100vh;
+}
+
+.nav-menu .menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 2rem 1.5rem 0 1.5rem;
+  width: 100%;
+}
+
+.menu a {
+  color: black;
+  opacity: 0.8;
 }
