--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -1,10 +1,4 @@
-.pokemons {
-  margin: 0;
-  padding: 0;
-  display: grid;
-  list-style: none;
-  grid-template-columns: 1fr 1fr;
-}
+/* CSS Pokemons List */
 
 .normal {
   background-color: #a6a877;
@@ -76,6 +70,14 @@
 
 .fairy {
   background-color: #f9aec7;
+}
+
+.pokemons {
+  margin: 0;
+  padding: 0;
+  display: grid;
+  list-style: none;
+  grid-template-columns: 1fr 1fr;
 }
 
 .pokemon {
@@ -155,6 +157,122 @@
   background-color: white;
 }
 
+/* CSS Pokemons Details */
+
+.content-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 65%;
+  justify-content: space-between;
+}
+
+.content-header .number {
+  color: #000;
+  opacity: 0.3;
+  font-size: 1.5rem;
+}
+
+.content-poke {
+  display: flex;
+  flex-direction: column;
+  overflow: auto;
+  position: fixed;
+  left: 0%;
+  right: 0%;
+  top: 0%;
+  margin: auto;
+  visibility: hidden;
+  padding: 1.5rem;
+  height: 100dvh;
+
+  /*  */
+  background: rgba(97, 64, 64, 0.16);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(3.1px);
+}
+
+.content-poke-visible {
+  position: fixed;
+  z-index: 999;
+  left: 0%;
+  right: 0%;
+  top: 10vh;
+  width: 80%;
+  border-radius: 1rem;
+  margin: auto;
+  box-shadow: -11px 14px 16px -9px rgba(148, 148, 148, 1);
+}
+
+.arrow-back {
+  display: flex;
+  flex-direction: row;
+  width: 90%;
+  padding-top: 1rem;
+  margin: auto;
+  border: none;
+  background-color: transparent;
+}
+
+.content-details {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.content-details img {
+  max-width: 100%;
+  height: 200px;
+  align-self: center;
+}
+
+.poke-name {
+  color: white;
+  font-size: 2.5rem;
+  text-transform: capitalize;
+}
+
+.about-pokemonJson {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.about-details {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.description {
+  color: white;
+  margin: 1rem;
+  font-size: 1.2rem;
+}
+
+.description-about {
+  color: white;
+  margin: 1rem;
+  width: 80%;
+  font-size: 1rem;
+  text-transform: capitalize;
+}
+
+.description-about .about-ol {
+  display: flex;
+  flex-direction: row;
+  font-size: 0.9rem;
+  width: auto;
+}
+
+.description-about .about-li {
+  margin-right: 0.3rem;
+  color: dimgray;
+}
+
 @media screen and (min-width: 380px) {
   .pokemons {
     grid-template-columns: 1fr 1fr;
@@ -165,10 +283,23 @@
   .pokemons {
     grid-template-columns: 1fr 1fr 1fr;
   }
+
+  .description-about .abouts {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
 }
 
 @media screen and (min-width: 992px) {
   .pokemons {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
+  .content-poke {
+    max-width: 1080px;
+  }
+}
+
+@media screen and (min-width: 1080px) {
+
 }
